--- a/MyHabits/Base.lproj/LaunchScreen.storyboard
+++ b/MyHabits/Base.lproj/LaunchScreen.storyboard
@@ -16,13 +16,6 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxX="YES" heightSizable="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AppIcon-1024px" translatesAutoresizingMaskIntoConstraints="NO" id="LKy-X4-6UI">
-                                <rect key="frame" x="147" y="388" width="120" height="120"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="120" id="X9R-Id-YR4"/>
-                                    <constraint firstAttribute="height" constant="120" id="ada-Uq-UWA"/>
-                                </constraints>
-                            </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="My Habits" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="YVg-IQ-pL8">
                                 <rect key="frame" x="0.0" y="775" width="414" height="24"/>
                                 <constraints>
@@ -32,14 +25,21 @@
                                 <color key="textColor" red="0.68627450980000004" green="0.32156862749999998" blue="0.87058823529999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="main_icon" translatesAutoresizingMaskIntoConstraints="NO" id="2Jz-WL-Pxu">
+                                <rect key="frame" x="147" y="393" width="120" height="120"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="120" id="f0O-hv-Xpp"/>
+                                    <constraint firstAttribute="width" constant="120" id="ssX-l0-ZTa"/>
+                                </constraints>
+                            </imageView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="LKy-X4-6UI" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="0a5-2C-Bwf"/>
+                            <constraint firstItem="2Jz-WL-Pxu" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="9l0-dj-KBm"/>
+                            <constraint firstItem="2Jz-WL-Pxu" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="PKl-s8-KDA"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="YVg-IQ-pL8" secondAttribute="trailing" id="Pbt-Th-U7D"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="YVg-IQ-pL8" secondAttribute="bottom" constant="63" id="Rfi-PA-yQJ"/>
-                            <constraint firstItem="LKy-X4-6UI" firstAttribute="centerY" secondItem="Ze5-6b-2t3" secondAttribute="centerY" id="gDd-jJ-up8"/>
                             <constraint firstItem="YVg-IQ-pL8" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="ikx-eW-etV"/>
                         </constraints>
                     </view>
@@ -50,7 +50,7 @@
         </scene>
     </scenes>
     <resources>
-        <image name="AppIcon-1024px" width="512" height="512"/>
+        <image name="main_icon" width="60" height="60"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
